--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -39,7 +39,7 @@ body {
     --header-color: rgba(0, 45, 98, 0.95);
     --footer-color: #001A36;
 
-    --header-menu-color: rgb(45, 86, 120) 45, 98, 0.95;
+    --header-menu-color: #062c54f7;
 }
 
 .section {
